# ariadne

./: Makefile  README.md  city_alternate_name.do  city_language_detect.py  pyproject.toml
ariadne/: ariadne.py  bad_matches.py  match.do
beads/.bead-meta/: bead  input.map
data/: training-cities.csv  training.csv
lib/: merge.do  read_city.do  read_country-codes.do  read_name.do  tsv2dta.do
temp/: training-cities.csv
